# slinky

./: README.md
deployment/architecture/: README.md
deployment/helm/: README.md  values.yaml
deployment/helm/templates/: rqdashboard.yaml
rqdashboard/: Dockerfile  Readme.md  main.py  requirements.txt
slinky/: Dockerfile  pyproject.toml
slinky/docs/developer/: architecture.md  guidelines.md
slinky/docs/user/: installation.md
virtuoso/: Dockerfile  README.md
web/: Dockerfile
web/templates/: base.html  index.html  query.html
